* EditPage refactored to allow extensions to derive new edit modes much easier.
* (bug 21826) Subsections of Special:Version now also have anchors
* (bug 19791) Add URL of file source as comment to thumbs (for ImageMagick)
* (bug 21946) Sorted wikitables do not properly handle minus signs
* (bug 18885) Red links for media files do not support shared repositories
* Added $wgFixArchaicUnicode, which, if enabled, converts some deprecated
  Unicode sequences in Arabic and Malayalam text to their Unicode 5.1
  equivalents.
* (bug 22051) Returing false in SpecialContributionsBeforeMainOutput hook now
  stops normal output
* Send new password e-mail in users preference language
* LanguageConverter now support nested using of manual convert syntax like
  "-{-{}-}-"
* (bug 16281) Show copyright system message on special pages
* Upload license preview now uses the API instead of action=ajax
* (bug 7346) Add <guid> to RSS to avoid duplicates
* (bug 19996) Added new hooks for Special:Search, which allow to further
  restrict/expand it.
* (bug 21936) When a revision has been patrolled, there's now a link back to the
  article

=== Bug fixes in 1.16 ===

* (bug 18031) Make namespace selector on Special:Export remember the previous
  selection
* The svn-version version numbers on Special:Version have been removed
* (bug 17374) Special:Export no longer exports two copies of the same page
* (bug 18190) Proper parsing in MediaWiki:Sharedupload message
* (bug 17617) HTML cleanup for ImagePage
* (bug 17964) namespaceDupes.php no longer fails on an empty interwiki table
* Improved error handling for image moving
* (bug 17974) On Special:SpecialPages, restricted special pages are now marked
  with <strong> tags, helps with text-based browsers
* (bug 18259) Special:DeletedContributions now also uses
  MediaWiki:Sp-contributions-logs for the link to Special:Log
* Don't add empty title="" attributes to links to anchors on the current page